# privbird-notes

./: .env  .env.dev  .env.prod  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  playbook-clean.yml  playbook-common.yml  playbook-https.yml  playbook-tor.yml  playbook.yml
backend/: .env.dev  .env.prod  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt
backend/feedback/: .env  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
backend/feedback/feedback/: settings.py  urls.py
backend/feedback/feedback/dto/: ApiResponse.py  Serializable.py
backend/feedback/feedback/dto/exceptions/: ApiException.py  ParseException.py  RateLimitException.py  ResourceNotFoundException.py  UnexpectedException.py  ValidationException.py
backend/feedback/feedback/dto/messages/: ApiMessage.py
backend/feedback/feedback/utils/: handlers.py  serializers.py  swagger.py  throttle.py
backend/feedback/feedbacks/: models.py  tests.py  views.py
backend/feedback/feedbacks/dto/messages/: FeedbackCreated.py
backend/feedback/feedbacks/migrations/: 0001_initial.py  0002_alter_feedback_email.py
backend/feedback/feedbacks/utils/: Constants.py
backend/feedback/locale/en/LC_MESSAGES/: django.po
backend/feedback/locale/ru/LC_MESSAGES/: django.po
backend/feedback/nginx/: Dockerfile  nginx.conf
backend/feedback/nginx/fail2ban/: nginx-req-limit.conf
backend/feedback/redis/: redis.conf
frontend/: .env.dev  .env.prod  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  docker-compose.prod.yml  (+7 more)
(+301 files in other folders)
